feat: tests for project repo loader